--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,3 +24,21 @@ body {
     padding: 3%;
     margin: 2%;
 }
+
+#random {
+    font-size: 2rem;
+    font-weight: 600;
+    max-width: 250px;
+    padding: 3%;
+    background-color: mediumaquamarine;
+}
+
+#counter {
+    max-width: 100px;
+    padding: 1%;
+    background-color: lightblue;
+}
+
+#crystal1 {
+    background-image: url();
+}
