--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,18 +27,54 @@ body {
 
 #random {
     font-size: 2rem;
+    color: black;
     font-weight: 600;
-    max-width: 250px;
+    width: 80px;
     padding: 3%;
+    text-align: center;
     background-color: mediumaquamarine;
 }
 
 #counter {
-    max-width: 100px;
+    width: 100px;
     padding: 1%;
     background-color: lightblue;
 }
 
+.flexContainer {
+    display: flex;
+    padding: 1%;
+    margin: 1%;
+}
+
 #crystal1 {
-    background-image: url();
+    border: 4px solid greenyellow;
+    background-color: white;
+    max-width: 70px;
+}
+
+#crystal2 {
+    border: 4px solid blue;
+    background-color: white;
+    max-width: 70px;
+}
+
+#crystal3 {
+    border: 4px solid gold;
+    background-color: white;
+    max-width: 70px;
+}
+
+#crystal4 {
+    border: 4px solid silver;
+    background-color: white;
+    max-width: 70px;
+}
+
+.score {
+    background-color: indigo;
+    color: white;
+    width: 300px;
+    margin: 2%;
+    padding: 1.7%;
 }
